--- a/amala portfolio.html
+++ b/amala portfolio.html
@@ -98,7 +98,7 @@
      
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="C:\Users\ELCOT\Desktop\HTML projects\images\Passport size photo .jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Passport size photo .jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>AMALA C T B</h1>
             <p>Web Developer And Cyber Analizer</p>
         </div>
